crates/math-core/src/snapshots/math_core__lexer__tests__unknown_environment.snap
---
source: crates/math-core/src/lexer.rs
expression: "\\begin{unknownenv} x + y \\end{unknownenv}"
---
Error: Unknown environment "unknownenv".
   ╭─[ <input>:1:7 ]
   │
 1 │ \begin{unknownenv} x + y \end{unknownenv}
   │       ──────┬─────  
   │             ╰─────── unknown environment
───╯
